scolar-core/language-family-tool/src/test/resources/cocos/languagefamily/invalid/UsedFeaturesExist.family
package cocos.languagefamily.invalid;

family UsedFeaturesExist {


  featurediagram BUU {
    BUU -> ConnectorCorrect? | X?;
    X -> Y;
  }


  feature ConnectorCorrect {
    component general.montiarcexample.connectorCorrectness.ConnectorCorrectness;
    wfrs ConnectorCorrect -> Architektur.ConnectorRule;
  }
}